samples/_failures_safe/1761393730_3c2231_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_17349de9.c: In function ‘main’:
./samples/SAFE/__tmp_17349de9.c:154:5: error: expected identifier or ‘(’ at end of input
  154 |     GraphOperation
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_17349de9.c:154:5: error: expected declaration or statement at end of input
